--- a/site/index.html
+++ b/site/index.html
@@ -22,6 +22,7 @@
                    <h1>
                        <a href="https://instagram.com/ax.milin?igshid=OGQ5ZDc2ODk2ZA=="><i class="fa-brands fa-instagram"></i></a>
                        <a href="https://www.facebook.com/ax.milin?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
+                       <a href="https://github.com/AxMilin"><i class="fa-brands fa-github"></i></a>
                    </h1>
                </div>
            </center></div>
