--- a/site/index.html
+++ b/site/index.html
@@ -80,7 +80,7 @@ body {
 }
    </style></head>
    
-   <body class="container star">
+   <body class="container stars">
        <div class="position-absolute top-50 start-50 translate-middle">
            <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
                <center><img src="/icon.png" class="image" style="width: 150px; height: 150px; border-radius: 50%;">
