--- a/site/index.html
+++ b/site/index.html
@@ -80,19 +80,21 @@ body {
 }
    </style></head>
    
-   <body class="container stars">
-       <div class="position-absolute top-50 start-50 translate-middle">
-           <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
-               <center><img src="/icon.png" class="image" style="width: 150px; height: 150px; border-radius: 50%;">
-                   <h1 class="text-center kanit">Ax_Milin</h1>
-               <h5 class="text-center kanit">Contacts</h5>
-               <div class="text-center kanit">
-                   <h1>
-                       <a href="https://instagram.com/ax.milin?igshid=OGQ5ZDc2ODk2ZA=="><i class="fa-brands fa-instagram"></i></a>
-                       <a href="https://www.facebook.com/ax.milin?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
-                       <a href="https://github.com/AxMilin"><i class="fa-brands fa-github"></i></a>
-                   </h1>
-               </div>
-           </center></div>
+   <body class="container">
+       <div class="stars">
+           <div class="position-absolute top-50 start-50 translate-middle">
+               <div class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
+                   <center><img src="/icon.png" class="image" style="width: 150px; height: 150px; border-radius: 50%;">
+                       <h1 class="text-center kanit">Ax_Milin</h1>
+                   <h5 class="text-center kanit">Contacts</h5>
+                   <div class="text-center kanit">
+                       <h1>
+                           <a href="https://instagram.com/ax.milin?igshid=OGQ5ZDc2ODk2ZA=="><i class="fa-brands fa-instagram"></i></a>
+                           <a href="https://www.facebook.com/ax.milin?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
+                           <a href="https://github.com/AxMilin"><i class="fa-brands fa-github"></i></a>
+                       </h1>
+                   </div>
+               </center></div>
+           </div>
        </div>
    </body></html>
