--- a/site/index.html
+++ b/site/index.html
@@ -31,7 +31,7 @@
                        <a class="push-down" href="https://instagram.com/ax.milin?igshid=OGQ5ZDc2ODk2ZA=="><i class="fa-brands fa-instagram"></i></a>
                        <a class="push-down" href="https://www.facebook.com/ax.milin?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
                        <a class="push-down" href="https://github.com/AxMilin"><i class="fa-brands fa-github"></i></a>
-                       <a class="push-down" href="https://discord.com/users/1144466670119829537/"><i class="fa-brands fa-discord"></i></a>
+                       <a class="push-down" href="https://discord.gg/gGdCH37Ced"><i class="fa-brands fa-discord"></i></a>
                    </h1>
                </div>
            </center></div>
