--- a/site/index.html
+++ b/site/index.html
@@ -12,7 +12,7 @@
    }
    .push-down:hover{
         transition: all .5s ease;
-        transform: scale(1.035);
+        transform: scale(1.35);
     }
     .push-down:not(:hover){
         transition: all .5s ease;
@@ -28,10 +28,10 @@
                <h5 class="text-center kanit">Contacts</h5>
                <div class="text-center kanit">
                    <h1>
-                       <a class="push-down" href="https://instagram.com/ax.milin?igshid=OGQ5ZDc2ODk2ZA=="><i class="fa-brands fa-instagram"></i></a>
-                       <a class="push-down" href="https://www.facebook.com/ax.milin?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
-                       <a class="push-down" href="https://github.com/AxMilin"><i class="fa-brands fa-github"></i></a>
-                       <a class="push-down" href="https://discord.com/users/1144466670119829537/"><i class="fa-brands fa-discord"></i></a>
+                       <a href="https://instagram.com/ax.milin?igshid=OGQ5ZDc2ODk2ZA=="><i class="push-down fa-brands fa-instagram"></i></a>
+                       <a href="https://www.facebook.com/ax.milin?mibextid=ZbWKwL"><i class="push-down fa-brands fa-facebook"></i></a>
+                       <a href="https://github.com/AxMilin"><i class="push-down fa-brands fa-github"></i></a>
+                       <a href="https://discord.com/users/1144466670119829537/"><i class="push-down fa-brands fa-discord"></i></a>
                    </h1>
                </div>
            </center></div>
