--- a/web/index.html
+++ b/web/index.html
@@ -1,3 +1,13 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E2M86KZE32"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E2M86KZE32');
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,10 +25,10 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <title>AxMilin - Personal Biography and Story</title>
+    <title>Ax_Milin - Personal Biography and Story</title>
     <link rel="icon" href="icon.jpg" type="image/jpg">
-    <meta name="description" content="Discover the personal story and biography of AxMilin, highlighting key moments and insights from their journey.">
-    <meta name="keywords" content="AxMilin, biography, personal story, journey, life experiences, background, achievements">    
+    <meta name="description" content="Discover the personal story and biography of Ax_Milin, highlighting key moments and insights from their journey.">
+    <meta name="keywords" content="AxMilin, Ax_Milin, biography, personal story, journey, life experiences, background, achievements">    
     <style>
         body {
             margin: 0;
@@ -99,7 +109,7 @@
         animation-direction: normal, alternate;" src="icon.jpg" alt="Artist">
             <div>
                 <h1 class="ml13">
-                    <span class="letter" style="opacity: 1; transform: translateY(0px) translateZ(0px);">AxMilin</span>
+                    <span class="letter" style="opacity: 1; transform: translateY(0px) translateZ(0px);">Ax_Milin</span>
                 </h1>
                 
             </div>
